--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,14 +1,13 @@
-PORT =
+PORT = 4000
 MONGODB_URI =
-JWT_SECRET =
+JWT_SECRET = bla-bla-bla-secret-key-to-khudki-bharni-chahiye
 
 CLOUDINARY_CLOUD_NAME =
 CLOUDINARY_API_KEY =
 CLOUDINARY_API_SECRET =
 
-CLOUDINARY_FOLDER =
+CLOUDINARY_FOLDER = Socio-AI
 
-FRONTEND_URL = 
-FLASK_URL =
+FRONTEND_URL = http://localhost:3000
 
 GOOGLE_API_KEY =
