/api/post/url working [Tested]  - https://www.instagram.com/p/DAyKCYXyzNO  - [Twittor] Pending...

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,19 @@
 FROM node:18-alpine
 
-WORKDIR /app
+RUN apk add --no-cache \
+    chromium \
+    nss \
+    freetype \
+    harfbuzz \
+    ca-certificates \
+    ttf-freefont \
+    nodejs \
+    yarn
+
+# Set environment variable for Puppeteer
+ENV PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
+
+WORKDIR /express
 
 COPY package*.json ./
 RUN npm install
