--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,10 +7,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
-    environment:
+    env_file:
       - ./frontend/.env
     volumes:
-      - ./frontend:/app
+      - ./frontend:/client
       - /app/node_modules
     depends_on:
       - backend
@@ -22,19 +22,20 @@ services:
       dockerfile: Dockerfile
     ports:
       - "4000:4000"
-    environment:
+    env_file:
       - ./backend/.env
+    environment:
       - FLASK_URL=http://flask:5000
     volumes:
-      - ./backend:/app
-      - /app/node_modules
-      - ./media:/app/media
-      - ./final:/app/final
+      - ./backend:/express
+      - /node_modules
+      - ./media:/media
+      - ./final:/final
     depends_on:
       - flask
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:4000/api"]
-      interval: 30s
+      interval: 10s
       timeout: 10s
       retries: 3
       start_period: 10s
@@ -46,9 +47,9 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./downloader:/app
-      - ./media:/app/media
-  
+      - ./downloader:/flask
+      - ./media:/media
+
 volumes:
   media:
     driver: local
