--- a/downloader/Dockerfile
+++ b/downloader/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3.9-slim
 
-WORKDIR /app
+WORKDIR /flask
 
-COPY requirements.txt .
+COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY . ./
 
 EXPOSE 5000
 
