--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,15 +1,15 @@
 FROM node:18-alpine
 
-WORKDIR /app
+WORKDIR /client
 
 # Copy package files first to leverage Docker cache
 COPY package*.json ./
 RUN npm install
 
 # Copy the rest of the application
-COPY . .
+COPY . ./
 
-# Build the Next.js application
+# Build the frontend application
 RUN npm run build
 
 EXPOSE 3000
