--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
         "lucide-react": "^0.460.0",
         "mini-svg-data-uri": "^1.4.4",
         "next": "^15.0.0",
+        "nprogress": "^0.2.0",
         "react": "^18.3.1",
         "react-dom": "^18.0.0",
         "tailwind-merge": "^2.5.4",
@@ -31,6 +32,7 @@
     },
     "devDependencies": {
         "@types/node": "^20",
+        "@types/nprogress": "^0.2.3",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "postcss": "^8",
