--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     ports:
       - "3000:3000"
     env_file:
-      - ./frontend/.env
+      - .env
     volumes:
       - ./frontend:/client
       - /app/node_modules
@@ -23,7 +23,7 @@ services:
     ports:
       - "4000:4000"
     env_file:
-      - ./backend/.env
+      - .env
     environment:
       - FLASK_URL=http://flask:5000
     volumes:
