[Bugs]: Frontend Updated [Bugs]: Backend Updated
Fixed Common Bugs [Tested Instagram Links:
https://www.instagram.com/p/DCvdlZJBHMT/?igsh=OGUwOWZwZDBxam9i
https://www.instagram.com/p/DCjXmwJTOXU/?img_index=1
]

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,7 +15,7 @@ ENV PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
 
 WORKDIR /express
 
-COPY package*.json ./
+COPY package.json ./
 RUN npm install
 
 COPY . .
